[gd_scene load_steps=10 format=2]

[ext_resource path="res://adventure_core/Dices.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/TextoChico.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/Garb.png" type="Texture" id=3]
[ext_resource path="res://font/Sketch Gothic School.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/IMFePIsc28P_0.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
outline_color = Color( 0.698039, 0.698039, 0.698039, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 59
outline_size = 6
outline_color = Color( 0.764706, 0.764706, 0.764706, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 119
outline_size = 6
outline_color = Color( 0.850586, 0.841207, 0.733464, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 84
outline_size = 1
outline_color = Color( 0.694118, 0.694118, 0.694118, 1 )
font_data = ExtResource( 4 )

[node name="Dices" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.00392157, 0.00392157, 0.862745 )

[node name="Tween" type="Tween" parent="."]

[node name="Panel" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -376.0

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 46.0
margin_right = -38.0
margin_bottom = 16.0
texture = ExtResource( 2 )
patch_margin_top = 374
patch_margin_bottom = 18

[node name="Garb" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5
margin_top = -205.5
margin_right = 29.5
margin_bottom = -146.5
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -383.5
margin_top = -138.5
margin_right = 383.5
margin_bottom = -77.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "TIRADA DE HABILIDAD"
align = 1
valign = 1

[node name="lb_ability" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -383.5
margin_top = -93.0
margin_right = 383.5
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "SIGILIO"
align = 1
valign = 1

[node name="lb_dificult" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -383.5
margin_top = -47.0
margin_right = 383.5
margin_bottom = 103.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "10"
align = 1
valign = 1

[node name="lb_result" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -383.5
margin_top = 63.0
margin_right = 383.5
margin_bottom = 193.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "[?]+[?]+2 = ??"
align = 1
valign = 1

[node name="Button" type="Button" parent="Panel"]
modulate = Color( 0.976471, 1, 0.392157, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 23.0
margin_top = 219.5
margin_right = 313.0
margin_bottom = 324.5
flat = true

[node name="Label2" type="Label" parent="Panel/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.364706, 0.364706, 0.364706, 1 )
custom_fonts/font = SubResource( 2 )
text = "TIRA YA!"
align = 1
valign = 1

[node name="btn_back" type="Button" parent="Panel"]
modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.0
margin_top = 219.5
margin_right = -7.0
margin_bottom = 324.5
flat = true

[node name="Label2" type="Label" parent="Panel/btn_back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.364706, 0.364706, 0.364706, 1 )
custom_fonts/font = SubResource( 2 )
text = "MEJOR NO"
align = 1
valign = 1
